edits after viewing

--- a/index.html
+++ b/index.html
@@ -136,22 +136,22 @@
       </section>
     </main>
 
-    <footer class="content">
+    <footer class="content lower-content">
       <a href="#" class="content-logo"
         ><span class="logo-footer"
-          ><span class="logo-web">Web</span>Studio</span
+          ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></span
         ></a
       >
       <address class="company-location">
         <ul class="contacts">
-          <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li><a href="#" class="contacts-location">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-item"
+            <a href="mailto:info@devstudio.com" class="contacts-item-lower"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="contacts-item"
+            <a href="tel:+380961111111" class="contacts-item-lower"
               >+38 096 111 11 11</a
             >
           </li>
