--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
       </section>
     </main>
 
-    <footer class="content">
+    <footer class="content lower-content">
       <a href="#" class="content-logo"
         ><span class="logo-footer"
           ><span class="logo-web">Web</span>Studio</span
