--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <nav>
         <ul class="menu-nav">
           <li class="menu-nav-item">
-            <a href="./index.html" class="menu-nav-link">Студия</a>
+            <a href="./index.html" class="menu-nav-link">Studio</a>
           </li>
           <li class="menu-nav-item">
-            <a href="./portfolio.html" class="menu-nav-link">Портфолио</a>
+            <a href="./portfolio.html" class="menu-nav-link">Portfolio</a>
           </li>
           <li class="menu-nav-item">
-            <a href="#" class="menu-nav-link">Контакты</a>
+            <a href="#" class="menu-nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -53,40 +53,36 @@
       <!-- section 1 -->
 
       <section class="service">
-        <h1 class="main-header">Эффективные решения для вашего бизнеса</h1>
-        <button class="order-button" type="button">Заказать услугу</button>
+        <h1 class="main-header">Effective solutions for your business</h1>
+        <button class="order-button" type="button">Order service</button>
       </section>
 
       <!-- section 2 -->
       <section class="description-of-services">
-        <h2 class="services-header">Описание услуг</h2>
+        <h2 class="services-header">
+Description of services</h2>
         <ul class="table-of-contents">
           <li class="table">
-            <h3 class="table-items">Внимание к деталям</h3>
+            <h3 class="table-items">Attention to detail</h3>
             <p class="description">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              Ideological considerations, as well as the beginning of daily work on the formation of a position.</p>
+          </li>
+          <li class="table">
+            <h3 class="table-items">Punctuality</h3>
+            <p class="description">
+              The task of the organization, in particular the framework and place of training of personnel entails.
             </p>
           </li>
           <li class="table">
-            <h3 class="table-items">Пунктуальность</h3>
+            <h3 class="table-items">Planning</h3>
             <p class="description">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Similarly, consultation with a broad asset is largely conditional.
             </p>
           </li>
           <li class="table">
-            <h3 class="table-items">Планирование</h3>
+            <h3 class="table-items">Modern technologies</h3>
             <p class="description">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="table">
-            <h3 class="table-items">Современные технологии</h3>
-            <p class="description">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
+              The significance of these problems is so obvious that the implementation of planned targets.
             </p>
           </li>
         </ul>
@@ -94,7 +90,7 @@
 
       <!-- section 3 -->
       <section class="occupation">
-        <h2 class="occupation-header">Чем мы занимаемся</h2>
+        <h2 class="occupation-header">What are we doing</h2>
         <ul class="occupation-item">
           <li>
             <img src="./images/box1.jpg" alt="create scheme" width="370" />
@@ -110,26 +106,26 @@
 
       <!-- section 4 -->
       <section class="team">
-        <h2 class="team-head">Наша команда</h2>
+        <h2 class="team-head">Our team</h2>
         <ul class="team-members">
           <li class="team-members-block">
-            <img src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="name">Игорь Демьяненко</h3>
+            <img src="./images/img1.jpg" alt="Igor Demyanenko" width="270" />
+            <h3 class="name">Igor Demyanenko</h3>
             <p class="job-title">Product Designer</p>
           </li>
           <li class="team-members-block">
-            <img src="./images/img2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="name">Ольга Репина</h3>
+            <img src="./images/img2.jpg" alt="Olga Repina" width="270" />
+            <h3 class="name">Olga Repina</h3>
             <p class="job-title">Frontend Developer</p>
           </li>
           <li class="team-members-block">
-            <img src="./images/img3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="name">Николай Тарасов</h3>
+            <img src="./images/img3.jpg" alt="Nikolai Tarasov" width="270" />
+            <h3 class="name">Nikolai Tarasov</h3>
             <p class="job-title">Marketing</p>
           </li>
           <li class="team-members-block">
-            <img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" />
-            <p class="name">Михаил Ермаков</p>
+            <img src="./images/img4.jpg" alt="Mikhail Ermakov" width="270" />
+            <p class="name">Mikhail Ermakov</p>
             <p class="job-title">UI Designer</p>
           </li>
         </ul>
@@ -144,7 +140,7 @@
       >
       <address class="company-location">
         <ul class="contacts">
-          <li><a href="#" class="contacts-location">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="#" class="contacts-location">Kyiv, Lesia Ukrainka Ave, 26</a></li>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-item-lower"
               >info@devstudio.com</a
