Section 3 and footer positioning

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Description of services</h2>
           <li>
             <img src="./images/box1.jpg" alt="create scheme" width="370" />
           </li>
-          <li>
+          <li class="box2">
             <img src="./images/box2.jpg" alt="create mobile app" width="370" />
           </li>
           <li>
@@ -123,7 +123,7 @@ Description of services</h2>
             <h3 class="name">Nikolai Tarasov</h3>
             <p class="job-title">Marketing</p>
           </li>
-          <li class="team-members-block">
+          <li class="team-members-block last-team-block">
             <img src="./images/img4.jpg" alt="Mikhail Ermakov" width="270" />
             <p class="name">Mikhail Ermakov</p>
             <p class="job-title">UI Designer</p>
