--- a/portfolio.html
+++ b/portfolio.html
@@ -23,13 +23,13 @@
       <nav>
         <ul class="menu-nav">
           <li class="menu-nav-item">
-            <a href="./index.html" class="menu-nav-link">Студия</a>
+            <a href="./index.html" class="menu-nav-link">Studio</a>
           </li>
           <li class="menu-nav-item">
-            <a href="./portfolio.html" class="menu-nav-link">Портфолио</a>
+            <a href="./portfolio.html" class="menu-nav-link">Portfolio</a>
           </li>
           <li class="menu-nav-item">
-            <a href="#" class="menu-nav-link">Контакты</a>
+            <a href="#" class="menu-nav-link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -54,26 +54,26 @@
         <!-- Filter -->
         <div>
           <ul class="filter">
-            <li><button type="button" class="filter-button">Все</button></li>
+            <li><button type="button" class="filter-button">All</button></li>
             <li>
-              <button type="button" class="filter-button">Веб-сайты</button>
+              <button type="button" class="filter-button">Web sites</button>
             </li>
             <li>
-              <button type="button" class="filter-button">Приложения</button>
+              <button type="button" class="filter-button">Applications</button>
             </li>
-            <li><button type="button" class="filter-button">Дизайн</button></li>
+            <li><button type="button" class="filter-button">Design</button></li>
             <li>
-              <button type="button" class="filter-button">Маркетинг</button>
+              <button type="button" class="filter-button">Marketing</button>
             </li>
           </ul>
         </div>
         <!-- Projects -->
         <ul class="projects">
           <li class="projects-block">
-            <img src="./images/img5.jpg" alt="Ноутбук и Веб-сайт" width="370" />
+            <img src="./images/img5.jpg" alt="Laptop and Website" width="370" />
             <div>
-              <h1 class="projects-header">Технокряк</h1>
-              <p class="projects-item">Веб-сайт</p>
+              <h1 class="projects-header">Technoquack</h1>
+              <p class="projects-item">Web site</p>
             </div>
           </li>
           <li class="projects-block">
@@ -83,65 +83,65 @@
               width="370"
             />
             <div>
-              <h1 class="projects-header">Постер New Orlean vs Golden Star</h1>
-              <p class="projects-item">Дизайн</p>
+              <h1 class="projects-header">Poster New Orlean vs Golden Star</h1>
+              <p class="projects-item">Design</p>
             </div>
           </li>
           <li class="projects-block">
             <img
               src="./images/img7.jpg"
-              alt="Логотип ресторана Seafood"
+              alt="Restaurant logo Seafood"
               width="370"
             />
             <div>
-              <h1 class="projects-header">Ресторан Seafood</h1>
-              <p class="projects-item">Приложение</p>
+              <h1 class="projects-header">Restaurant Seafood</h1>
+              <p class="projects-item">Application</p>
             </div>
           </li>
           <li class="projects-block">
-            <img src="./images/img8.jpg" alt="Логотип наушников" width="370" />
+            <img src="./images/img8.jpg" alt="Headphone logo" width="370" />
             <div>
-              <h1 class="projects-header">Проект Prime</h1>
-              <p class="projects-item">Маркетинг</p>
+              <h1 class="projects-header">Project Prime</h1>
+              <p class="projects-item">Marketing</p>
             </div>
           </li>
           <li class="projects-block">
-            <img src="./images/img9.jpg" alt="Коробки" width="370" />
+            <img src="./images/img9.jpg" alt="boxes" width="370" />
             <div>
-              <h1 class="projects-header">Проект Boxes</h1>
-              <p class="projects-item">Приложение</p>
+              <h1 class="projects-header">Project Boxes</h1>
+              <p class="projects-item">Application</p>
             </div>
           </li>
           <li class="projects-block">
-            <img src="./images/img10.jpg" alt="Экран и вэб-сайт" width="370" />
+            <img src="./images/img10.jpg" alt="Screen and website" width="370" />
             <div>
               <h1 class="projects-header">Inspiration has no Borders</h1>
-              <p class="projects-item">Веб-сайт</p>
+              <p class="projects-item">Web site</p>
             </div>
           </li>
           <li class="projects-block">
-            <img src="./images/img11.jpg" alt="Книга" width="370" />
+            <img src="./images/img11.jpg" alt="Book" width="370" />
             <div>
-              <h1 class="projects-header">Издание Limited Edition</h1>
-              <p class="projects-item">Дизайн</p>
+              <h1 class="projects-header">Edition Limited Edition</h1>
+              <p class="projects-item">Design</p>
             </div>
           </li>
           <li class="projects-block">
-            <img src="./images/img12.jpg" alt="Бирка с логотипом" width="370" />
+            <img src="./images/img12.jpg" alt="Logo tag" width="370" />
             <div>
-              <h1 class="projects-header">Проект LAB</h1>
-              <p class="projects-item">Маркетинг</p>
+              <h1 class="projects-header">Project LAB</h1>
+              <p class="projects-item">Marketing</p>
             </div>
           </li>
           <li class="projects-block">
             <img
               src="./images/img13.jpg"
-              alt="Работа за ноутбуком"
+              alt="Working on a laptop"
               width="370"
             />
             <div>
               <h1 class="projects-header">Growing Business</h1>
-              <p class="projects-item">Приложение</p>
+              <p class="projects-item">Application</p>
             </div>
           </li>
         </ul>
@@ -156,7 +156,7 @@
       >
       <address class="company-location">
         <ul class="contacts">
-          <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li><p>Kyiv, Lesia Ukrainka Ave, 26</p></li>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-item"
               >info@devstudio.com</a
