Portfolio styles update

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,10 +49,10 @@
       </div>
     </header>
 
-    <main>
-      <section>
+    <main class="main">
+      <section class="maint-content-section">
         <!-- Filter -->
-        <div>
+        <div class="main-content">
           <ul class="filter">
             <li><button type="button" class="filter-button">All</button></li>
             <li>
@@ -151,19 +151,19 @@
     <footer class="content lower-content">
       <a href="#" class="content-logo"
         ><span class="logo-footer"
-          ><span class="logo-web">Web</span>Studio</span
+          ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></span
         ></a
       >
       <address class="company-location">
         <ul class="contacts">
-          <li><p>Kyiv, Lesia Ukrainka Ave, 26</p></li>
+          <li><a href="#" class="contacts-location">Kyiv, Lesia Ukrainka Ave, 26</a></li>
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-item"
+            <a href="mailto:info@devstudio.com" class="contacts-item-lower"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="contacts-item"
+            <a href="tel:+380961111111" class="contacts-item-lower"
               >+38 096 111 11 11</a
             >
           </li>
