Minor issues update

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Description of services</h2>
           <li>
             <img src="./images/box1.jpg" alt="create scheme" width="370" />
           </li>
-          <li class="box2">
+          <li>
             <img src="./images/box2.jpg" alt="create mobile app" width="370" />
           </li>
           <li>
@@ -139,7 +139,7 @@ Description of services</h2>
         ></a
       >
       <address class="company-location">
-        <ul class="contacts">
+        <ul class="contacts footer-contacts">
           <li><a href="#" class="contacts-location">Kyiv, Lesia Ukrainka Ave, 26</a></li>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-item-lower"
