--- a/portfolio.html
+++ b/portfolio.html
@@ -148,14 +148,14 @@
       </section>
     </main>
 
-    <footer class="content lower-content">
+   <footer class="content lower-content">
       <a href="#" class="content-logo"
         ><span class="logo-footer"
           ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></span
         ></a
       >
       <address class="company-location">
-        <ul class="contacts">
+        <ul class="contacts footer-contacts">
           <li><a href="#" class="contacts-location">Kyiv, Lesia Ukrainka Ave, 26</a></li>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-item-lower"
