Add social link and customers logo

--- a/index.html
+++ b/index.html
@@ -55,34 +55,66 @@
       <section class="service">
         <h1 class="main-header">Effective solutions for your business</h1>
         <button class="order-button" type="button">Order service</button>
+        <div class="overlay"></div>
       </section>
 
       <!-- section 2 -->
       <section class="description-of-services">
-        <h2 class="services-header">
-Description of services</h2>
+        <h2 class="services-header">Description of services</h2>
         <ul class="table-of-contents">
           <li class="table">
+            <div class="table-logo">
+              <img
+                class="table-logo-item"
+                src="./images/antenna.png"
+                alt="antenna"
+              />
+            </div>
             <h3 class="table-items">Attention to detail</h3>
             <p class="description">
-              Ideological considerations, as well as the beginning of daily work on the formation of a position.</p>
-          </li>
-          <li class="table">
-            <h3 class="table-items">Punctuality</h3>
-            <p class="description">
-              The task of the organization, in particular the framework and place of training of personnel entails.
+              Ideological considerations, as well as the beginning of daily work
+              on the formation of a position.
             </p>
           </li>
           <li class="table">
+            <div class="table-logo">
+              <img
+                class="table-logo-item"
+                src="./images/Vector.png"
+                alt="Vector"
+              />
+            </div>
+            <h3 class="table-items">Punctuality</h3>
+            <p class="description">
+              The task of the organization, in particular the framework and
+              place of training of personnel entails.
+            </p>
+          </li>
+          <li class="table">
+            <div class="table-logo">
+              <img
+                class="table-logo-item"
+                src="./images/diagram.png"
+                alt="diagram"
+              />
+            </div>
             <h3 class="table-items">Planning</h3>
             <p class="description">
               Similarly, consultation with a broad asset is largely conditional.
             </p>
           </li>
           <li class="table">
+            <div class="table-logo">
+              <img
+                class="table-logo-item"
+                src="./images/astronaut.png"
+                alt="astronaut"
+              />
+            </div>
             <h3 class="table-items">Modern technologies</h3>
             <p class="description">
-              The significance of these problems is so obvious that the implementation of planned targets.
+              The significance of these problems is so obvious that the
+              implementation of planned targets.
             </p>
           </li>
         </ul>
@@ -112,47 +144,311 @@ Description of services</h2>
             <img src="./images/img1.jpg" alt="Igor Demyanenko" width="270" />
             <h3 class="name">Igor Demyanenko</h3>
             <p class="job-title">Product Designer</p>
+            <ul class="social-network">
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/instagram 2.svg"
+                    alt="instagram"
+                    width="20"
+                  />
+                </a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/twitter.svg"
+                    alt="twitter"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link"
+                  ><img
+                    class="social-network-item-logo"
+                    src="/images/facebook.svg"
+                    alt="facebook"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/linkedin.svg"
+                    alt="linkedin"
+                    width="20"
+                  />
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-members-block">
             <img src="./images/img2.jpg" alt="Olga Repina" width="270" />
             <h3 class="name">Olga Repina</h3>
             <p class="job-title">Frontend Developer</p>
+            <ul class="social-network">
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/instagram 2.svg"
+                    alt="instagram"
+                    width="20"
+                  />
+                </a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/twitter.svg"
+                    alt="twitter"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link"
+                  ><img
+                    class="social-network-item-logo"
+                    src="/images/facebook.svg"
+                    alt="facebook"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/linkedin.svg"
+                    alt="linkedin"
+                    width="20"
+                  />
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-members-block">
             <img src="./images/img3.jpg" alt="Nikolai Tarasov" width="270" />
             <h3 class="name">Nikolai Tarasov</h3>
             <p class="job-title">Marketing</p>
+            <ul class="social-network">
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/instagram 2.svg"
+                    alt="instagram"
+                    width="20"
+                  />
+                </a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/twitter.svg"
+                    alt="twitter"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link"
+                  ><img
+                    class="social-network-item-logo"
+                    src="/images/facebook.svg"
+                    alt="facebook"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/linkedin.svg"
+                    alt="linkedin"
+                    width="20"
+                  />
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-members-block last-team-block">
             <img src="./images/img4.jpg" alt="Mikhail Ermakov" width="270" />
             <p class="name">Mikhail Ermakov</p>
             <p class="job-title">UI Designer</p>
+            <ul class="social-network">
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/instagram 2.svg"
+                    alt="instagram"
+                    width="20"
+                  />
+                </a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/twitter.svg"
+                    alt="twitter"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link"
+                  ><img
+                    class="social-network-item-logo"
+                    src="/images/facebook.svg"
+                    alt="facebook"
+                    width="20"
+                /></a>
+              </li>
+              <li class="social-network-item">
+                <a href="#" class="social-link">
+                  <img
+                    class="social-network-item-logo"
+                    src="/images/linkedin.svg"
+                    alt="linkedin"
+                    width="20"
+                  />
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
+      </section>
+
+      <!-- section 5 -->
+      <section>
+        <div class="customers">
+          <h3 class="customers-header">Regular customers</h3>
+          <ul class="customers-list">
+            <li class="customers-list-item">
+              <img
+                class="customers-logo"
+                src="/images/group.svg"
+                alt="customer"
+              />
+            </li>
+            <li class="customers-list-item">
+              <img
+                class="customers-logo"
+                src="/images/group1.svg"
+                alt="customer1"
+              />
+            </li>
+            <li class="customers-list-item">
+              <img
+                class="customers-logo"
+                src="/images/group2.svg"
+                alt="customer2"
+              />
+            </li>
+            <li class="customers-list-item">
+              <img
+                class="customers-logo"
+                src="/images/group3.svg"
+                alt="customer3"
+              />
+            </li>
+            <li class="customers-list-item">
+              <img
+                class="customers-logo"
+                src="/images/group4.svg"
+                alt="customer4"
+              />
+            </li>
+            <li class="customers-list-item">
+              <img
+                class="customers-logo"
+                src="/images/group5.svg"
+                alt="customers"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="content lower-content">
-      <a href="#" class="content-logo"
-        ><span class="logo-footer"
-          ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></span
-        ></a
-      >
-      <address class="company-location">
-        <ul class="contacts footer-contacts">
-          <li><a href="#" class="contacts-location">Kyiv, Lesia Ukrainka Ave, 26</a></li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-item-lower"
-              >info@devstudio.com</a
-            >
+      <div class="footer-block">
+        <a href="#" class="content-logo"
+          ><span class="logo-footer"
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></span
+          ></a
+        >
+        <address class="company-location">
+          <ul class="contacts footer-contacts">
+            <li>
+              <a href="#" class="contacts-location"
+                >Kyiv, Lesia Ukrainka Ave, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts-item-lower"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contacts-item-lower"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+
+      <div class="footer-social-bloc">
+        <h4 class="footer-social-header">Join Us</h4>
+        <ul class="footer-social-list">
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/instagram 2.svg"
+                alt="instagram"
+                width="20"
+              />
+            </a>
           </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts-item-lower"
-              >+38 096 111 11 11</a
-            >
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/twitter.svg"
+                alt="twitter"
+                width="20"
+              />
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/facebook.svg"
+                alt="facebook"
+                width="20"
+              />
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/linkedin.svg"
+                alt="linkedin"
+                width="20"
+              />
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </footer>
   </body>
 </html>
