--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,11 @@
             </div>
           </li>
           <li class="projects-block">
-            <img src="./images/img10.jpg" alt="Screen and website" width="370" />
+            <img
+              src="./images/img10.jpg"
+              alt="Screen and website"
+              width="370"
+            />
             <div>
               <h1 class="projects-header">Inspiration has no Borders</h1>
               <p class="projects-item">Web site</p>
@@ -148,27 +152,80 @@
       </section>
     </main>
 
-   <footer class="content lower-content">
-      <a href="#" class="content-logo"
-        ><span class="logo-footer"
-          ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></span
-        ></a
-      >
-      <address class="company-location">
-        <ul class="contacts footer-contacts">
-          <li><a href="#" class="contacts-location">Kyiv, Lesia Ukrainka Ave, 26</a></li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-item-lower"
-              >info@devstudio.com</a
-            >
+     <footer class="content lower-content">
+      <div class="footer-block">
+        <a href="#" class="content-logo"
+          ><span class="logo-footer"
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></span
+          ></a
+        >
+        <address class="company-location">
+          <ul class="contacts footer-contacts">
+            <li>
+              <a href="#" class="contacts-location"
+                >Kyiv, Lesia Ukrainka Ave, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts-item-lower"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contacts-item-lower"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+
+      <div class="footer-social-bloc">
+        <h4 class="footer-social-header">Join Us</h4>
+        <ul class="footer-social-list">
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/instagram 2.svg"
+                alt="instagram"
+                width="20"
+              />
+            </a>
           </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts-item-lower"
-              >+38 096 111 11 11</a
-            >
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/twitter.svg"
+                alt="twitter"
+                width="20"
+              />
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/facebook.svg"
+                alt="facebook"
+                width="20"
+              />
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a href="#" class="social-link">
+              <img
+                class="footer-social-logo"
+                src="/images/linkedin.svg"
+                alt="linkedin"
+                width="20"
+              />
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
     </footer>
   </body>
 </html>
