--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/instagram 2.svg"
+                    src="./images/instagram 2.svg"
                     alt="instagram"
                     width="20"
                   />
@@ -159,7 +159,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/twitter.svg"
+                    src="./images/twitter.svg"
                     alt="twitter"
                     width="20"
                 /></a>
@@ -168,7 +168,7 @@
                 <a href="#" class="social-link"
                   ><img
                     class="social-network-item-logo"
-                    src="/images/facebook.svg"
+                    src="./images/facebook.svg"
                     alt="facebook"
                     width="20"
                 /></a>
@@ -177,7 +177,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/linkedin.svg"
+                    src="./images/linkedin.svg"
                     alt="linkedin"
                     width="20"
                   />
@@ -194,7 +194,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/instagram 2.svg"
+                    src="./images/instagram 2.svg"
                     alt="instagram"
                     width="20"
                   />
@@ -204,7 +204,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/twitter.svg"
+                    src="./images/twitter.svg"
                     alt="twitter"
                     width="20"
                 /></a>
@@ -213,7 +213,7 @@
                 <a href="#" class="social-link"
                   ><img
                     class="social-network-item-logo"
-                    src="/images/facebook.svg"
+                    src="./images/facebook.svg"
                     alt="facebook"
                     width="20"
                 /></a>
@@ -222,7 +222,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/linkedin.svg"
+                    src="./images/linkedin.svg"
                     alt="linkedin"
                     width="20"
                   />
@@ -239,7 +239,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/instagram 2.svg"
+                    src="./images/instagram 2.svg"
                     alt="instagram"
                     width="20"
                   />
@@ -249,7 +249,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/twitter.svg"
+                    src="./images/twitter.svg"
                     alt="twitter"
                     width="20"
                 /></a>
@@ -258,7 +258,7 @@
                 <a href="#" class="social-link"
                   ><img
                     class="social-network-item-logo"
-                    src="/images/facebook.svg"
+                    src="./images/facebook.svg"
                     alt="facebook"
                     width="20"
                 /></a>
@@ -267,7 +267,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/linkedin.svg"
+                    src="./images/linkedin.svg"
                     alt="linkedin"
                     width="20"
                   />
@@ -284,7 +284,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/instagram 2.svg"
+                    src="./images/instagram 2.svg"
                     alt="instagram"
                     width="20"
                   />
@@ -294,7 +294,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/twitter.svg"
+                    src="./images/twitter.svg"
                     alt="twitter"
                     width="20"
                 /></a>
@@ -303,7 +303,7 @@
                 <a href="#" class="social-link"
                   ><img
                     class="social-network-item-logo"
-                    src="/images/facebook.svg"
+                    src="./images/facebook.svg"
                     alt="facebook"
                     width="20"
                 /></a>
@@ -312,7 +312,7 @@
                 <a href="#" class="social-link">
                   <img
                     class="social-network-item-logo"
-                    src="/images/linkedin.svg"
+                    src="./images/linkedin.svg"
                     alt="linkedin"
                     width="20"
                   />
@@ -331,42 +331,42 @@
             <li class="customers-list-item">
               <img
                 class="customers-logo"
-                src="/images/group.svg"
+                src="./images/group.svg"
                 alt="customer"
               />
             </li>
             <li class="customers-list-item">
               <img
                 class="customers-logo"
-                src="/images/group1.svg"
+                src="./images/group1.svg"
                 alt="customer1"
               />
             </li>
             <li class="customers-list-item">
               <img
                 class="customers-logo"
-                src="/images/group2.svg"
+                src="./images/group2.svg"
                 alt="customer2"
               />
             </li>
             <li class="customers-list-item">
               <img
                 class="customers-logo"
-                src="/images/group3.svg"
+                src="./images/group3.svg"
                 alt="customer3"
               />
             </li>
             <li class="customers-list-item">
               <img
                 class="customers-logo"
-                src="/images/group4.svg"
+                src="./images/group4.svg"
                 alt="customer4"
               />
             </li>
             <li class="customers-list-item">
               <img
                 class="customers-logo"
-                src="/images/group5.svg"
+                src="./images/group5.svg"
                 alt="customers"
               />
             </li>
@@ -411,7 +411,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/instagram 2.svg"
+                src="./images/instagram 2.svg"
                 alt="instagram"
                 width="20"
               />
@@ -421,7 +421,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/twitter.svg"
+                src="./images/twitter.svg"
                 alt="twitter"
                 width="20"
               />
@@ -431,7 +431,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/facebook.svg"
+                src="./images/facebook.svg"
                 alt="facebook"
                 width="20"
               />
@@ -441,7 +441,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/linkedin.svg"
+                src="./images/linkedin.svg"
                 alt="linkedin"
                 width="20"
               />
