--- a/portfolio.html
+++ b/portfolio.html
@@ -188,7 +188,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/instagram 2.svg"
+                src="./images/instagram 2.svg"
                 alt="instagram"
                 width="20"
               />
@@ -198,7 +198,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/twitter.svg"
+                src="./images/twitter.svg"
                 alt="twitter"
                 width="20"
               />
@@ -208,7 +208,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/facebook.svg"
+                src="./images/facebook.svg"
                 alt="facebook"
                 width="20"
               />
@@ -218,7 +218,7 @@
             <a href="#" class="social-link">
               <img
                 class="footer-social-logo"
-                src="/images/linkedin.svg"
+                src="./images/linkedin.svg"
                 alt="linkedin"
                 width="20"
               />
