--- a/portfolio.html
+++ b/portfolio.html
@@ -36,13 +36,14 @@
       <div>
         <ul class="contacts">
           <li class="contacts-item-mail">
+            
             <a href="mailto:info@devstudio.com" class="contacts-item"
-              >info@devstudio.com</a
+              > <img class="contacts-logo" src="./images/maillogo.svg" alt="maillogo"> info@devstudio.com</a
             >
           </li>
           <li class="contacts-item-phone">
             <a href="tel:+380961111111" class="contacts-item"
-              >+38 096 111 11 11</a
+              > <img class="contacts-logo" src="./images/phonelogo.svg" alt="phonelogo"> +38 096 111 11 11</a
             >
           </li>
         </ul>
